--- a/hw3/index.html
+++ b/hw3/index.html
@@ -24,7 +24,7 @@
     <script id="Chess board"> // Шахматная доска простой вариант перебором
     var string = "";
     var symbol = "#";
-    for (var i = 0; i <= 64 - 9; i++) {
+    for (var i = 0; i <= 55; i++) {
         if (i % 7 == 0) {
             string += "\n" + symbol;
         }
